--- a/Web_Console/console.html
+++ b/Web_Console/console.html
@@ -29,7 +29,7 @@
                     <br />
                     <div style="width: 100%;height: 35px;background-color: black;border: 1px solid green;color: green;" id="back">Back Logon</div>
                     <br />
-                    <p style="color: green;">[*]SetoolLinux[*]</p>
+                    <p style="color: green;">[*]Setool Main[*]</p>
                 </div>
                 <div style="width: 80%;float: right;">
                     <iframe id="iframe"></iframe>
